// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields checkbox field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-50 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <input
            autoFocus={false}
            checked={false}
            className="PrivateSwitchBase-input-53"
            data-indeterminate={false}
            disabled={false}
            id="root"
            onChange={[Function]}
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
      </span>
      <span
        className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      />
    </label>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields checkbox field 2`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-50 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <input
            autoFocus={false}
            checked={false}
            className="PrivateSwitchBase-input-53"
            data-indeterminate={false}
            disabled={false}
            id="root"
            onChange={[Function]}
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </span>
      <span
        className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      />
    </label>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields checkboxes field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="MuiFormLabel-root"
      htmlFor="root"
    />
    <div
      className="MuiFormGroup-root"
    >
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-50 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              autoFocus={false}
              checked={false}
              className="PrivateSwitchBase-input-53"
              data-indeterminate={false}
              disabled={false}
              id="root_0"
              onChange={[Function]}
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          foo
        </span>
      </label>
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-50 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              autoFocus={false}
              checked={false}
              className="PrivateSwitchBase-input-53"
              data-indeterminate={false}
              disabled={false}
              id="root_1"
              onChange={[Function]}
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          bar
        </span>
      </label>
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-50 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              autoFocus={false}
              checked={false}
              className="PrivateSwitchBase-input-53"
              data-indeterminate={false}
              disabled={false}
              id="root_2"
              onChange={[Function]}
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          fuzz
        </span>
      </label>
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-50 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              autoFocus={false}
              checked={false}
              className="PrivateSwitchBase-input-53"
              data-indeterminate={false}
              disabled={false}
              id="root_3"
              onChange={[Function]}
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          qux
        </span>
      </label>
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields format color 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <input
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "format": "color",
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
        type="color"
        uiSchema={
          Object {
            "classNames": undefined,
          }
        }
        value=""
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields format date 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <input
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "format": "date",
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
        type="date"
        uiSchema={
          Object {
            "classNames": undefined,
          }
        }
        value=""
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields format datetime 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <input
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "format": "datetime",
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
        type="datetime-local"
        uiSchema={
          Object {
            "classNames": undefined,
          }
        }
        value=""
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  />
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields number field 0 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <input
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "type": "number",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
        type="number"
        uiSchema={
          Object {
            "classNames": undefined,
          }
        }
        value={0}
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <input
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "type": "number",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
        type="number"
        uiSchema={
          Object {
            "classNames": undefined,
          }
        }
        value=""
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields password field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <input
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="password"
        value=""
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields radio field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="d-block form-label"
        htmlFor="root"
      />
      <div
        className="form-check"
      >
        <input
          checked={false}
          className="form-check-input"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="radio"
          value={true}
        />
        <label
          className="form-check-label"
          htmlFor="root"
          title=""
        >
          Yes
        </label>
      </div>
      <div
        className="form-check"
      >
        <input
          checked={false}
          className="form-check-input"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="radio"
          value={false}
        />
        <label
          className="form-check-label"
          htmlFor="root"
          title=""
        >
          No
        </label>
      </div>
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields select field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <select
        autoFocus={false}
        className="custom-select"
        disabled={false}
        id="root"
        name="nodejs"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      >
        <option
          disabled={false}
          value="foo"
        >
          foo
        </option>
        <option
          disabled={false}
          value="bar"
        >
          bar
        </option>
      </select>
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div>
      <p>
        <input
          autoFocus={false}
          defaultValue=""
          disabled={false}
          id="root"
          onChange={[Function]}
          type="file"
        />
      </p>
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <input
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "format": "email",
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
        type="email"
        uiSchema={
          Object {
            "classNames": undefined,
          }
        }
        value=""
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <input
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "format": "uri",
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
        type="url"
        uiSchema={
          Object {
            "classNames": undefined,
          }
        }
        value=""
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <input
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
        type="string"
        uiSchema={
          Object {
            "classNames": undefined,
          }
        }
        value=""
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields string field with placeholder 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="mb-0 form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      />
      <input
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="placeholder"
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
        type="string"
        uiSchema={
          Object {
            "classNames": undefined,
            "ui:placeholder": "placeholder",
          }
        }
        value=""
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields textarea field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="MuiFormControl-root MuiTextField-root"
    >
      <div
        className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-multiline MuiInput-multiline"
        onClick={[Function]}
      >
        <textarea
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline MuiInput-inputMultiline"
          disabled={false}
          id="root"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          required={false}
          rows={5}
        />
      </div>
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="unsupported-field"
    >
      <p>
        Unsupported field schema
        <span>
           for
           field 
          <code>
            root
          </code>
        </span>
        <em>
          : 
          Unknown field type undefined
        </em>
        .
      </p>
      <pre>
        {}
      </pre>
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;
